--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,6 @@
+@import '../styles/variables';
+
+
 .App {
   text-align: center;
 }
@@ -12,4 +15,32 @@
 
 .card-button {
   margin: 2px;
+}
+
+Form {
+  padding: 5px;
+  text-align: center;
+}
+
+Form label {
+  font-weight: bold;
+}
+
+.welcome-page {
+  text-align: center;
+  color: white;
+  padding-top: 40px;
+  font-size: 70px;
+  background-image: url('../assets/G2bsTq.jpg');
+  background-size: 100%;
+  height: 94vh;
+}
+
+.welcome-page h1 {
+  font-size: 80px;
+}
+
+.add-player-view {
+  background-color: $bgColor;
+  height: 95vh;
 }
