--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -3,6 +3,8 @@
 
 .App {
   text-align: center;
+  background-color: $bgColor;
+  height: 94vh;
 }
 
 .card-img-top {
@@ -10,7 +12,9 @@
 }
 
 .card {
-  margin: 10px;
+  margin-top: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .card-button {
@@ -42,5 +46,5 @@ Form label {
 
 .add-player-view {
   background-color: $bgColor;
-  height: 95vh;
+  height: 94vh;
 }
